# Klippi

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CURRENT_CHANGELOG.md  README.md  cz.json  devenv.nix  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vcpkg.json  vite.config.ts
.github/ISSUE_TEMPLATE/: improvement-suggestion.md
.github/workflows/: bump.yml  main.yml
.run/: tauri dev.run.xml
src/: App.svelte  app.d.ts  app.html  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src-tauri/src/modules/: cleaning.rs  environment.rs  mod.rs
src-tauri/src/modules/config/: app_config.rs  constants.rs  mod.rs  user_settings.rs
src-tauri/src/modules/ffmpeg/: ffmpeg.rs  ffmpeg_builder.rs  ffmpeg_builder_helpers.rs  ffmpeg_factory.rs  ffprobe.rs  installer.rs  mod.rs  progress.rs
src-tauri/src/modules/ffmpeg/models/: clip_creation_options.rs  mod.rs  output_format.rs
src-tauri/src/modules/file_processing/: http.rs  mod.rs  video_metadata.rs
src-tauri/src/modules/gstreamer/: gstreamer_builder.rs  mod.rs
src-tauri/src/modules/tauri_commands/: discover.rs  mod.rs  thumbnail.rs
src-tauri/src/modules/utils/: command_utils.rs  filesystem_utils.rs  math.rs  mod.rs
src-tauri/src/modules/video_processing/: mod.rs  strategy.rs  thumbnail_creation_strategy.rs
src-tauri/src/modules/video_processing/strategies/: gstreamer_thumbnail_creation_strategy.rs  mod.rs
src/lib/: Greet.svelte  TitleBar.svelte  VideoSelector.svelte
src/lib/Installer/: DependecyDisplay.svelte  Installer.svelte  InstallerStore.ts  MissingDependencies.svelte
src/lib/Installer/Steps/: Done.svelte  Downloading.svelte  Options.svelte  Step.svelte
src/lib/PanicRoom/: Alert.svelte  PanicRoom.svelte
src/lib/Processing/: Processing.svelte
src/lib/VideoEditor/: VideoEditor.svelte  VideoEditorStore.ts
src/lib/VideoEditor/ClipOptions/: ClipOptions.svelte  ClipOptionsStore.ts  Stats.svelte
src/lib/VideoEditor/ClipOptions/Tabs/: Advanced.svelte  Basic.svelte
src/lib/VideoEditor/Timeline/: KonvaTimeline.ts  Timeline.svelte
src/lib/VideoEditor/VideoPlayer/: VideoPlayer.svelte  VolumeController.svelte
src/lib/components/: Alert.svelte  InputGroup.svelte  Update.svelte
src/lib/models/: AppConfig.ts  ClipCreationOptions.ts  ClipFormat.ts  DownloadProgress.ts  Limitation.ts  OutputFormat.ts  Progress.ts  Status.ts  TimelineThumbnailsResult.ts  UserSettings.ts  VideoData.ts
src/lib/shared/: AppStore.ts  Page.svelte
src/lib/shared/Input/: InputGroup.svelte
src/lib/stores/: ClipOptionsStore.ts  InstallerStore.ts  SettingsStore.ts  VideoEditorStore.ts
src/lib/utilities/: FileSize.ts
src/models/: StepChange.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  TitleBar.svelte  TitleBarLink.svelte
src/routes/installer/: +page.svelte  DependencyDisplay.svelte  MissingDependencies.svelte
src/routes/installer/Steps/: Done.svelte  Downloading.svelte  Installing.svelte  Options.svelte  Step.svelte  Verifying.svelte
src/routes/processing/: +page.svelte
src/routes/video-editor/: +page.svelte
src/routes/video-editor/ClipOptions/: ClipOptions.svelte  Stats.svelte
src/routes/video-editor/ClipOptions/Tabs/: Advanced.svelte  Basic.svelte  Share.svelte
src/routes/video-editor/Timeline/: KonvaTimeline.ts  Timeline.svelte  TimelineStore.ts
src/routes/video-editor/VideoPlayer/: VideoPlayer.svelte  VolumeController.svelte
