[package]
name = "klippi"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "c48c767"
dependencies = ["libarchive"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["libarchive"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive", "rc"] }
wax = "0.6.0"
lazy_static = "1.4.0"
anyhow = "1.0.71"
reqwest = {version = "0.13.1", features = ["stream"] }
futures-util = "0.3.28"
compress-tools = "0.15.1"
md5 = "0.8.0"
ts-rs = "11.1.0"
fern = "0.7.1"
humantime = "2.1.0"
log = "0.4.19"
toml = "0.9.10"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
filetime_creation = "0.2.0"
tempfile = "3.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
